--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Header styling section */
 header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     background-color: black;
@@ -18,6 +22,10 @@ header > ul {
     gap: 2rem;
     font-size: 2rem;
     list-style: none;
+}
+
+header > ul > li {
+    cursor: pointer;
 }
 
 #selectedTab {
@@ -39,12 +47,17 @@ main {
     padding: 1rem;
     flex-direction: column;
     color: beige;
-    background-color: black;
-    border-radius: 1rem;
+}
+
+#home-descriptor > h2 {
+    font-size: 3rem;
+    color: goldenrod;
 }
 
 #home-descriptor > ul {
-    margin-left: 1rem;
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    list-style-type: symbols(cyclic '✨');
 }
 
 #menu-container {
@@ -62,6 +75,7 @@ main {
     background-color: black;
     border-radius: 1rem;
     box-shadow: 3px 3px 2px gray;
+    cursor: pointer;
 }
 
 .flavor > img {
@@ -80,6 +94,20 @@ main {
 
 .flavor:hover {
     bottom: 2px;
+}
+
+#contact-container {
+    padding: 1rem;
+    color: beige;
+    justify-self: left;
+    align-self: flex-start;
+    margin-left: 3rem;
+    margin-top: 5rem;
+    font-size: 1.4rem;
+}
+
+#contact-container > p > span {
+    font-weight: bold;
 }
 
 /* Footer stylyng */
